# graphics_test

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
run/shaders/: basicV.sc
src/: main.cpp  sdl_bgfx_setup.h
src/game/: Game.cpp  Game.hpp
src/graphics/: GraphicsSystem.cpp  GraphicsSystem.hpp  gfxhelpers.cpp  gfxhelpers.hpp
src/shaders/: Shader.cpp  Shader.hpp
